# auth-rust

./: Cargo.toml  README.md
src/: lib.rs
src/configuration/: config.rs  db_config.rs  default_user_config.rs  jwt_config.rs  server_config.rs
src/errors/: error.rs
