[package]
name = "auth-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-web-grants = "4.0.3"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.29"
dotenvy = "0.15.7"
argon2 = "0.5.2"
regex = "1.10.2"
jsonwebtoken = "9.3.0"
env_logger = "0.11.3"
log = "0.4.20"
utoipa = "4.1.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }